<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uz.smartarena.edu.iu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_themeFragment"
            app:destination="@id/themeFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="uz.smartarena.edu.iu.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="uz.smartarena.edu.iu.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/themeFragment"
        android:name="uz.smartarena.edu.iu.ThemeFragment"
        android:label="fragment_themes"
        tools:layout="@layout/fragment_themes" >
        <action
            android:id="@+id/action_themeFragment_to_lessonFragment"
            app:destination="@id/lessonFragment" />
    </fragment>
    <fragment
        android:id="@+id/lessonFragment"
        android:name="uz.smartarena.edu.iu.LessonFragment"
        android:label="fragment_lesson"
        tools:layout="@layout/fragment_lesson" >
        <action
            android:id="@+id/action_lessonFragment_to_testFragment"
            app:destination="@id/testFragment" />
    </fragment>
    <fragment
        android:id="@+id/testFragment"
        android:name="uz.smartarena.edu.iu.ui.TestFragment"
        android:label="fragment_test"
        tools:layout="@layout/fragment_test" />
</navigation>