<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/large_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="top"
        android:text="@string/large_title"
        android:textAppearance="@style/large_title"
        android:textColor="#090A0A"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/a_caption"
        android:textAppearance="@style/a_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/large_title" />

    <LinearLayout
        android:id="@+id/field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/field"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/a_caption">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:elevation="0dp"
            android:outlineSpotShadowColor="@color/main">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="16dp"
                android:src="@drawable/uz" />
        </androidx.cardview.widget.CardView>

        <com.arefbhrn.maskededittext.MaskedEditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16sp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/inter_regular"
            android:hint="_________"
            android:inputType="phone"
            android:textColor="#434343"
            android:textSize="16dp"
            app:allowed_chars="1234567890"
            app:keep_hint="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mask="+998 (##) ### - ## - ##" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/siz_kiritga"
        android:textAppearance="@style/siz_kiritga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field" />

    <CheckBox
        android:id="@+id/accept"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/radio"
        android:button="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/men_ilovani"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/men_ilovani"
        android:textAppearance="@style/men_ilovani"
        android:textColorLink="#4169E1"
        app:layout_constraintBottom_toBottomOf="@+id/accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accept"
        app:layout_constraintTop_toTopOf="@+id/accept" />

    <RelativeLayout
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/back_buttons1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/text"
            android:textColor="@color/seriy" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>