<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_back" />
    </LinearLayout>

    <TextView
        android:id="@+id/tasdiqlash_"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/tasdiqlash_"
        android:textAppearance="@style/tasdiqlash_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/telefon_raq"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:text="@string/telefon_raq"
        android:textAppearance="@style/telefon_raq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasdiqlash_" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telefon_raq">

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/number_oval"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:ems="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxEms="1"
                android:maxLength="1"
                android:maxLines="1"
                android:minEms="1"
                android:minLines="1"
                android:singleLine="true" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/number_oval"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/frameLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:ems="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxEms="1"
                android:maxLength="1"
                android:maxLines="1"
                android:minEms="1"
                android:minLines="1"
                android:singleLine="true" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/number_oval"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/frameLayout"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:ems="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxEms="1"
                android:maxLength="1"
                android:maxLines="1"
                android:minEms="1"
                android:minLines="1"
                android:singleLine="true" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout4"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/number_oval"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/frameLayout3"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:ems="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxEms="1"
                android:maxLength="1"
                android:maxLines="1"
                android:minEms="1"
                android:minLines="1"
                android:singleLine="true" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout5"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/number_oval"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/frameLayout4"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:ems="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxEms="1"
                android:maxLength="1"
                android:maxLines="1"
                android:minEms="1"
                android:minLines="1"
                android:singleLine="true" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout6"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/number_oval"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/frameLayout5"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:ems="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxEms="1"
                android:maxLength="1"
                android:maxLines="1"
                android:minEms="1"
                android:minLines="1"
                android:singleLine="true" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="00:00"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resend"
        app:layout_constraintTop_toBottomOf="@+id/pin" />

    <RelativeLayout
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/back_buttons1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/count">

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal|center_vertical"
            android:lineSpacingExtra="-3sp"
            android:text="@string/text"
            android:textAppearance="@style/text" />
    </RelativeLayout>

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/qayta"
        android:textAppearance="@style/qayta"
        android:textColor="@color/seriy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/count"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pin" />

    <!--    <com.chaos.view.PinView-->
    <!--        android:id="@+id/pinView"-->
    <!--        app:lineColor="#42BA3D"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="32dp"-->
    <!--        android:gravity="center"-->
    <!--        app:itemCount="6"-->
    <!--        app:itemHeight="50dp"-->
    <!--        app:itemRadius="25dp"-->
    <!--        app:itemWidth="50dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/telefon_raq" />-->
</androidx.constraintlayout.widget.ConstraintLayout>